--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "sheyrooms",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.18.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.12",
     "nodemon": "^2.0.7",
@@ -25,5 +24,14 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VuppalapatiJyosthna/sheyrooms.git"
+  },
+  "bugs": {
+    "url": "https://github.com/VuppalapatiJyosthna/sheyrooms/issues"
+  },
+  "homepage": "https://github.com/VuppalapatiJyosthna/sheyrooms#readme",
+  "description": ""
 }
